--- a/index.html
+++ b/index.html
@@ -41,19 +41,40 @@ body { font-family:'Plus Jakarta Sans',sans-serif; background:#F8FAFC; }
   </nav>
 </header>
 
-<main class="max-w-5xl mx-auto p-4 space-y-6">
+<main class="max-w-5xl mx-auto p-4 space-y-8">
 
-<section id="content-casa" class="tab-content active">
-  <h2 class="text-xl font-bold mb-3">Tarefas de <span id="view-name">Manu</span></h2>
-  <div id="dias" class="flex gap-2 mb-4"></div>
-  <div id="tarefas" class="space-y-3"></div>
+<!-- TAREFAS -->
+<section id="content-casa" class="tab-content active space-y-4">
+  <h2 class="text-xl font-bold">Tarefas de <span id="view-name">Manu</span></h2>
+
+  <div class="flex gap-2" id="dias"></div>
+
+  <div class="bg-white p-4 rounded-xl border space-y-2">
+    <input id="novaTarefa" placeholder="Nova tarefa" class="w-full p-2 bg-slate-100 rounded">
+    <select id="tarefaUser" class="w-full p-2 bg-slate-100 rounded">
+      <option value="Manu">Manu</option>
+      <option value="Pedro">Pedro</option>
+    </select>
+    <button onclick="addTarefa()" class="w-full bg-indigo-600 text-white p-2 rounded">Cadastrar tarefa</button>
+  </div>
+
+  <div id="tarefas" class="space-y-2"></div>
 </section>
 
-<section id="content-lazer" class="tab-content space-y-3">
+<!-- LAZER -->
+<section id="content-lazer" class="tab-content space-y-4">
   <h2 class="text-xl font-bold">Lazer</h2>
+
+  <div class="bg-white p-4 rounded-xl border space-y-2">
+    <input id="lazerNome" placeholder="Descrição" class="w-full p-2 bg-slate-100 rounded">
+    <input id="lazerValor" type="number" placeholder="Valor" class="w-full p-2 bg-slate-100 rounded">
+    <button onclick="addLazer()" class="w-full bg-indigo-600 text-white p-2 rounded">Cadastrar lazer</button>
+  </div>
+
   <div id="lazer"></div>
 </section>
 
+<!-- FINANCEIRO -->
 <section id="content-financeiro" class="tab-content space-y-4">
   <div class="grid grid-cols-2 gap-4">
     <div class="bg-indigo-600 text-white p-6 rounded-2xl">
@@ -74,27 +95,31 @@ body { font-family:'Plus Jakarta Sans',sans-serif; background:#F8FAFC; }
   <button onclick="addValor()" class="w-full bg-slate-900 text-white p-3 rounded-lg">Adicionar</button>
 </section>
 
-<section id="content-compras" class="tab-content space-y-2">
+<!-- COMPRAS -->
+<section id="content-compras" class="tab-content space-y-4">
   <h2 class="text-xl font-bold">Compras</h2>
+
+  <div class="bg-white p-4 rounded-xl border space-y-2">
+    <input id="novaCompra" placeholder="Item de compra" class="w-full p-2 bg-slate-100 rounded">
+    <button onclick="addCompra()" class="w-full bg-indigo-600 text-white p-2 rounded">Cadastrar item</button>
+  </div>
+
   <div id="compras"></div>
 </section>
 
+<!-- AGENDA -->
 <section id="content-agenda" class="tab-content space-y-4">
   <h2 class="text-xl font-bold">Agenda</h2>
 
   <input id="agendaData" type="date" class="w-full p-3 rounded bg-slate-100">
   <input id="agendaDesc" type="text" placeholder="Compromisso" class="w-full p-3 rounded bg-slate-100">
-
   <select id="agendaUser" class="w-full p-3 rounded bg-slate-100">
     <option value="Manu">Manu</option>
     <option value="Pedro">Pedro</option>
   </select>
+  <button onclick="addAgenda()" class="w-full bg-indigo-600 text-white p-3 rounded-lg">Adicionar compromisso</button>
 
-  <button onclick="addAgenda()" class="w-full bg-indigo-600 text-white p-3 rounded-lg">
-    Adicionar compromisso
-  </button>
-
-  <div id="agenda" class="space-y-2"></div>
+  <div id="agenda"></div>
 </section>
 
 </main>
@@ -139,59 +164,53 @@ render();
 }
 
 function addValor(){
-const valorInput=document.getElementById('valor');
-const destinoSelect=document.getElementById('destino');
-const v=Number(valorInput.value);
+const v=Number(document.getElementById('valor').value);
 if(!v) return;
-saldo[destinoSelect.value]+=v;
-valorInput.value="";
+saldo[document.getElementById('destino').value]+=v;
+document.getElementById('valor').value="";
 render();
 }
 
 function addAgenda(){
-const d=document.getElementById('agendaData').value;
-const desc=document.getElementById('agendaDesc').value;
-const u=document.getElementById('agendaUser').value;
+const d=agendaData.value, desc=agendaDesc.value, u=agendaUser.value;
 if(!d||!desc) return;
 agenda.push({d,desc,u});
-document.getElementById('agendaData').value="";
-document.getElementById('agendaDesc').value="";
+agendaData.value=agendaDesc.value="";
+render();
+}
+
+function addCompra(){
+const c=novaCompra.value;
+if(!c) return;
+comprasData.push(c);
+novaCompra.value="";
+render();
+}
+
+function addLazer(){
+const n=lazerNome.value, v=Number(lazerValor.value);
+if(!n||!v) return;
+lazerData.push({n,v});
+lazerNome.value=lazerValor.value="";
+render();
+}
+
+function addTarefa(){
+const t=novaTarefa.value, u=tarefaUser.value;
+if(!t) return;
+tarefasData[dia].push({t,u});
+novaTarefa.value="";
 render();
 }
 
 function render(){
-const diasDiv=document.getElementById('dias');
-const tarefasDiv=document.getElementById('tarefas');
-const lazerDiv=document.getElementById('lazer');
-const comprasDiv=document.getElementById('compras');
-const agendaDiv=document.getElementById('agenda');
-
-diasDiv.innerHTML=Object.keys(tarefasData).map(d=>
-`<button onclick="dia='${d}';render()" class="px-3 py-1 bg-white border rounded">${d.slice(0,3)}</button>`
-).join("");
-
-tarefasDiv.innerHTML=(tarefasData[dia]||[])
-.filter(t=>t.u===user)
-.map(t=>`<div class="bg-white p-3 rounded border">${t.t}</div>`)
-.join("") || "Folga 🎉";
-
-lazerDiv.innerHTML=lazerData.map(l=>
-`<div class="bg-white p-3 rounded border">${l.n} — R$ ${l.v}</div>`
-).join("");
-
-comprasDiv.innerHTML=comprasData.map(c=>
-`<div class="bg-white p-2 rounded border">${c}</div>`
-).join("");
-
-agendaDiv.innerHTML=agenda.map(a=>`
-<div class="bg-white p-3 rounded border text-sm">
-<strong>${a.d}</strong> — ${a.desc} (${a.u})
-</div>`).join("");
-
-document.getElementById('total-lazer').innerText=
-saldo.lazer.toLocaleString('pt-br',{style:'currency',currency:'BRL'});
-document.getElementById('total-casa').innerText=
-saldo.casa.toLocaleString('pt-br',{style:'currency',currency:'BRL'});
+dias.innerHTML=Object.keys(tarefasData).map(d=>`<button onclick="dia='${d}';render()" class="px-3 py-1 bg-white border rounded">${d.slice(0,3)}</button>`).join("");
+tarefas.innerHTML=(tarefasData[dia]||[]).filter(t=>t.u===user).map(t=>`<div class="bg-white p-3 rounded border">${t.t}</div>`).join("")||"Folga 🎉";
+lazer.innerHTML=lazerData.map(l=>`<div class="bg-white p-3 rounded border">${l.n} — R$ ${l.v}</div>`).join("");
+compras.innerHTML=comprasData.map(c=>`<div class="bg-white p-2 rounded border">${c}</div>`).join("");
+agenda.innerHTML=agenda.map(a=>`<div class="bg-white p-3 rounded border"><strong>${a.d}</strong> — ${a.desc} (${a.u})</div>`).join("");
+total-lazer.innerText=saldo.lazer.toLocaleString('pt-br',{style:'currency',currency:'BRL'});
+total-casa.innerText=saldo.casa.toLocaleString('pt-br',{style:'currency',currency:'BRL'});
 }
 
 render();
